--- a/6º-Semestre-CC/redes/lab/aula-02/lab-1.org
+++ b/6º-Semestre-CC/redes/lab/aula-02/lab-1.org
@@ -1,7 +1,9 @@
 * Respostas da atividade de lab
 
 ** 1)
-   a) 192.168.15.6
+
+*** a)
+   192.168.15.6
    enp3s0: flags=4163<UP,BROADCAST,RUNNING,MULTICAST>  mtu 1500
                inet 192.168.15.6  netmask 255.255.255.0  broadcast 192.168.15.255
                inet6 2804:431:cff2:e359:aeee:ed7:b035:8547  prefixlen 64  scopeid 0x0<global>
@@ -11,3 +13,44 @@
                RX errors 0  dropped 1  overruns 0  frame 0
                TX packets 308581  bytes 58556640 (55.8 MiB)
                TX errors 0  dropped 0 overruns 0  carrier 0  collisions 0
+
+*** b)
+    O endereço mostrado era diferente. Porque nosso IP visto na rede
+    de computadores é o do provedor de internet e o outro IP é somente
+    o IP local.
+
+*** c)
+    É endereço pelo qual todo o tráfego de minha rede local passa para
+    se conectar com outras redes.
+
+
+** 2)
+
+*** a)
+   ➜  ~ ping www.ietr.fr
+   PING vmebene3.univ-rennes1.fr (129.20.134.3) 56(84) bytes of data.
+   64 bytes from vmebene3.univ-rennes1.fr (129.20.134.3): icmp_seq=1 ttl=51 time=208 ms
+   64 bytes from vmebene3.univ-rennes1.fr (129.20.134.3): icmp_seq=2 ttl=51 time=209 ms
+   64 bytes from vmebene3.univ-rennes1.fr (129.20.134.3): icmp_seq=3 ttl=51 time=206 ms
+   64 bytes from vmebene3.univ-rennes1.fr (129.20.134.3): icmp_seq=4 ttl=51 time=207 ms
+   64 bytes from vmebene3.univ-rennes1.fr (129.20.134.3): icmp_seq=5 ttl=51 time=207 ms
+   64 bytes from vmebene3.univ-rennes1.fr (129.20.134.3): icmp_seq=6 ttl=51 time=212 ms
+   64 bytes from vmebene3.univ-rennes1.fr (129.20.134.3): icmp_seq=7 ttl=51 time=207 ms
+   64 bytes from vmebene3.univ-rennes1.fr (129.20.134.3): icmp_seq=8 ttl=51 time=208 ms
+   64 bytes from vmebene3.univ-rennes1.fr (129.20.134.3): icmp_seq=9 ttl=51 time=208 ms
+   64 bytes from vmebene3.univ-rennes1.fr (129.20.134.3): icmp_seq=10 ttl=51 time=208 ms
+   64 bytes from vmebene3.univ-rennes1.fr (129.20.134.3): icmp_seq=11 ttl=51 time=219 ms
+   64 bytes from vmebene3.univ-rennes1.fr (129.20.134.3): icmp_seq=12 ttl=51 time=207 ms
+
+   --- vmebene3.univ-rennes1.fr ping statistics ---
+   12 packets transmitted, 12 received, 0% packet loss, time 11317ms
+   rtt min/avg/max/mdev = 205.632/208.676/219.232/3.533 ms
+
+*** b)
+    A variável time informa o tempo de reposta do servidor para com o
+    cliente.
+
+*** c)
+    O TTL significa "Time to Live" e representa a quantidade de
+    roteadores ou saltos que 
+*** d)
